refactoring, and add, test and doc series list put action #11
